static/style.css
@font-face {
  font-family: 'fira';
  src: url('/fonts/firasans-regular-webfont.woff2') format('woff2'), url('/fonts/firasans-regular-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}
html {
  background-attachment: fixed;
  background-size: cover;
  background-repeat: no-repeat;
}
* {
  box-sizing: border-box !important;
  max-width: 100%;
  -webkit-overflow-scrolling: touch;
}
.points {
  display: inline-block;
}
.icon {
  opacity: 0.5;
  height: 15px;
  width: auto;
  margin-right: 5px;
}
.icon:hover {
  opacity: 1;
}
.error {
  background-color: red;
  width: 100%;
  top: 0px;
}
body,
input {
  font-family: "fira";
}
html,
body {
  position: relative;
  font-size: 16px;
  width: 500px;
  max-width: 100%;
  margin: auto;
}
a:link,
a:visited {
  color: inherit;
}
.message a:link {
  text-decoration: none;
  box-shadow: inset 0 -2px 0 0 #fff, inset 0 -3px 0 0 rgba(0, 0, 255, 0.5);
}
.vote {
  font-family: monospace;
  position: absolute;
  clear: both;
  text-align: center;
  top: 6px;
  right: 0px;
  box-sizing: border-box;
  width: 100px;
}
.vote button {
  margin: auto;
  width: 30px;
  height: 30px;
  line-height: 30px;
  border-radius: 30px;
  background-color: #333333;
  color: white;
  display: inline-block;
  border-style: none;
  text-align: center;
  opacity: 0.5;
  font-size: 1rem;
}
.vote button:hover {
  opacity: 1;
  cursor: pointer;
}
button[disabled=disabled],
button:disabled {
  opacity: 0.2;
}
button[disabled=disabled]:hover,
button:disabled:hover {
  opacity: 0.2;
  cursor: initial;
}
ul#chat {
  padding: 0px;
  margin-top: 120px;
  padding-bottom: 84px;
}
header {
  position: fixed;
  top: 0px;
  z-index: 2;
  background-color: white;
}
header .inner {
  color: black;
  z-index: 50;
  text-align: right;
  line-height: 30px;
  box-sizing: border-box;
  left: 0px;
  font-size: 80%;
  width: 500px;
  max-width: 100%;
  margin: auto;
}
header nav {
  padding: 15px;
  text-align: right;
  line-height: 25px;
}
header nav img {
  vertical-align: bottom;
  height: 25px;
  margin-left: 5px;
  margin-right: 5px;
  width: auto;
}
header a {
  text-decoration: none;
}
header b {
  text-transform: uppercase;
}
#posting {
  width: 100%;
  position: fixed;
  bottom: 0px;
  left: 0px;
}
#postmessage {
  background-color: white;
  border-style: none;
  border-color: #333333;
  position: relative;
  margin: auto;
  width: 500px;
}
#postmessage textarea {
  height: 100px;
  width: 100%;
}
.tag {
  position: relative;
}
.tag a {
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  color: transparent !important;
}
#tagContainer {
  position: relative;
  width: 500px;
  max-width: 100%;
  border-style: solid;
  border-color: black;
  border-width: 0.5px;
}
div.tagsinput {
  border-style: none;
  color: white;
  width: calc(100% - 50px) !important;
}
div.tagsinput input {
  font-size: 1rem !important;
}
.message-wrapper {
  position: relative;
  padding: 10px;
  padding-bottom: 20px;
  display: block;
  list-style: none;
  background-color: white;
  border-style: solid;
  border-width: 0.5px;
}
.message-audience {
  padding-top: 15px;
  font-size: 80%;
}
.message-channel {
  font-size: 50%;
}
.message img {
  margin-top: 10px;
  margin-bottom: 10px;
  width: 100%;
  height: auto;
}
.message-date {
  color: grey;
  font-size: 50%;
}
.message-tag a {
  font-style: italic;
  text-decoration: none;
}
.message-tag:after {
  content: ", "
}
.message-tag:last-child:after {
  content: ""
}
.message-context {
  font-size: 70%;
  padding-top: 10px;
}
.message-author {
  font-size: 70%;
  font-weight: bold;
}
.message-author a {
  text-decoration: none;
}
.message {
  overflow-x: hidden;
  line-height: 1.4em;
  font-family: "fira";
  padding: 20px 0 10px 0;
  width: 100%;
  font-size: 1.2em;
}
input,
textarea {
  padding: 0.5em;
  box-sizing: border-box;
  width: 100%;
  font-size: 1rem;
}
button {
  display: block;
  width: 100%;
}
.form-block {
  display: none;
  position: absolute;
  text-align: center;
  padding-left: 10px;
  padding-right: 10px;
  background-color: white;
  box-sizing: border-box;
  left: 0px;
  width: 100%;
  height: 100%;
  z-index: 10;
  padding-top: 50px;
}
a.close {
  text-align: center;
  display: block;
}
.form-block:target {
  display: block;
}
.form-block label {
  display: block;
  padding-top: 10px;
}
.form-block h1,
.form-block h2,
.form-block label {
  font-family: "fira"
}
.form-block input[type=submit] {
  color: black;
  background-color: white;
  border: solid black;
  margin-top: 10px;
}
.form-block form {
  width: 300px;
  padding: 0 30px 0 30px;
  margin: auto;
  max-width: 100%;
}
#authCodeReveal {
  margin: auto;
  margin-bottom: 20px;
  color: black;
  border-style: solid;
  background-color: white;
  width: 200px;
}
.authCode {
  display: none;
  font-size: 120%;
  padding: 10px;
  text-align: center;
}
fieldset {
  border: none;
}
.removeChannel,
.addChannel {
  border-style: none;
  border-color: white;
  padding: 5px;
  cursor: pointer;
}
form p {
  font-size: 80%;
}
.addChannel {
  margin-top: 10px;
  background: green;
  color: white;
}
.removeChannel {
  background: red;
  color: white
}
.fileUpload {
  position: relative;
  overflow: hidden;
}
.fileUpload input.upload {
  position: absolute;
  top: 0;
  height: 100%;
  right: 0;
  margin: 0;
  padding: 0;
  font-size: 20px;
  cursor: pointer;
  opacity: 0;
  filter: alpha(opacity=0);
}
.send-icon {
  height: 40px;
  width: 40px;
  display: inline-block;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  cursor: pointer;
}
#postmessage button {
  float: right;
  width: 100px;
  border-style: none;
  color: white;
  font-size: 1rem;
  background-color: #333333;
}
.fileUpload {
  background-image: url("icons/image.svg");
}
#filters {
  width: 50px;
  height: 100%;
  border-style: none;
  position: absolute;
  right: 0px;
  top: 0px;
  background-image: url("icons/filter.svg");
  background-color: transparent;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 50%;
}

